<resources>
    <string name="app_name">Campus Expense Manager</string>
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="student_id">Student ID</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="submit">Submit</string>
    <string name="description">Description</string>
    <string name="create_account">Create Account</string>
</resources>