<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/white">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textSize="36sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="32dp" />

    <EditText
        android:id="@+id/register_fullname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/full_name"
        android:inputType="text"
        android:padding="12dp"
        android:layout_marginBottom="16dp" />

    <EditText
        android:id="@+id/register_studentid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/student_id"
        android:inputType="text"
        android:padding="12dp"
        android:layout_marginBottom="16dp" />

    <EditText
        android:id="@+id/register_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="text"
        android:padding="12dp"
        android:layout_marginBottom="16dp" />

    <EditText
        android:id="@+id/register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="12dp"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/btnRegisterSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:textColor="@android:color/white"
        android:padding="12dp"
        android:backgroundTint="#1E0F75"/>
</LinearLayout>